latest favicon changes

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,7 @@
     <meta name='description' property='og:description' content='Erudite gives users the ability to add, search for, and otherwise interact with songs. It serves a similar purpose as the lyrics website Genius.' />
     <meta name='url' property='og:url' content='https://erudite-1.herokuapp.com/' />
     <meta name='author' content='Alejandro Carrizosa Grant' />
+    <link rel=''>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;500&display=swap" rel="stylesheet">
